fix: apply job, entity